# p2p_transferRust

./: .gitignore  Cargo.toml  document.md  example.rs  test_identity.rs  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_tokio_opts2  test_tokio_opts2.rs
.agent/rules/: rule.md
.agent/workflows/: document.md
.jules/: sentinel.md
checkList/: PERFORMANCE_REPORT_2026-01-08.md  SECURITY_REPORT_2024-05-23.md
p2p_core/: Cargo.toml
p2p_core/src/: bin_test.rs  config.rs  discovery.rs  identity.rs  lib.rs  pairing.rs  transfer.rs
p2p_core/src/http_share/: mod.rs  server.rs  tunnel.rs  websocket.rs
p2p_core/src/http_share/static/: 404.html  app.js  index.html  style.css
p2p_core/src/http_share/websocket/: handler.rs  messages.rs  mod.rs  state.rs  utils.rs
p2p_core/src/transfer/: constants.rs  hash.rs  mod.rs  protocol.rs  quic.rs  receiver.rs  sender.rs  server.rs  utils.rs
p2p_core/tests/: security_csp_style.rs  security_dos.rs  security_identity_toctou.rs  security_initial_dos.rs  security_pairing_dos.rs  security_pairing_timeout.rs  security_protocol.rs  security_tests.rs  security_unauthenticated_upload.rs  security_websocket.rs  security_websocket_dos.rs  security_ws_dos.rs  test_broadcast.rs  test_discovery_msg.rs  test_file_info.rs  test_identity_perms.rs  test_magic_bytes.rs  test_path_traversal.rs  test_verification.rs
p2p_gui/: Cargo.toml
p2p_gui/src/: app.rs  main.rs
p2p_gui/src/ui/: mod.rs  toolbar.rs
p2p_gui/src/ui/windows/: devices.rs  files.rs  mod.rs  qr_code.rs  transfer.rs  upload_confirm.rs  verify.rs  wan_connect.rs
p2p_wan/: Cargo.toml
p2p_wan/src/: connector.rs  identity.rs  lib.rs  listener.rs  protocol.rs  receiver.rs  sender.rs
p2p_wan/tests/: wan_transfer_test.rs
