[package]
name = "p2p_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

quinn = "0.11.9"
rustls = { version = "0.23.25", default-features = false, features = ["ring"] }

serde = { version = "1.0.228", features = ["derive"] }
hostname = "0.4.2"
serde_json = "1.0.145"
bincode = "1.3"
anyhow = "1.0.100"
thiserror = "2.0.17"
bytes = "1.11.0"
directories = "6.0.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rcgen = "0.14.6"
