[package]
name = "p2p_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

quinn = "0.11.9"
rustls = { version = "0.23.25", default-features = false, features = ["ring"] }

serde = { version = "1.0.228", features = ["derive"] }
hostname = "0.4.2"
serde_json = "1.0.145"
bincode = "1.3"
anyhow = "1.0.100"
thiserror = "2.0.17"
bytes = "1.11.0"
directories = "6.0.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rcgen = "0.14.6"
blake3 = { version = "1.8.2", features = ["rayon"] }
memmap2 = "0.9.5"
tracing = "0.1.43"
tracing-subscriber = "0.3"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "limit"] }
qrcode = "0.14"
image = "0.25"
local-ip-address = "0.6"
tokio-util = "0.7"
tokio-tungstenite = "0.26"
futures-util = "0.3"
iroh = "0.95.1"
rand = "0.9.2"
ngrok = "0.18.0"
url = "2.5"
dotenvy = "0.15"
