[package]
name = "p2p_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
p2p_core = { path = "../p2p_core" }

eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui-phosphor = { version = "0.11", default-features = false, features = ["regular"] }

tokio = {version = "1.48.0" , features = ["rt-multi-thread", "macros"]}

tracing = "0.1.43"
tracing-subscriber = "0.3.22"