[package]
name = "p2p_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
p2p_core = { path = "../p2p_core" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
p2p_wan = { path = "../p2p_wan" }
iroh = "0.95.1"

eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui-phosphor = { version = "0.11", default-features = false, features = ["regular"] }

tokio = {version = "1.48.0" , features = ["rt-multi-thread", "macros"]}

tracing = "0.1.43"
rfd = "0.16.0"
sysinfo = "0.37.2"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
local-ip-address = "0.6"