[package]
name = "p2p_wan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
iroh = "0.95.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p2p_core = { path = "../p2p_core" }
